tests/NormalTests/paczka1/fuzzy1/34481033.err
Error in line 17: dnqpU5 A942 -3,6
Error in line 5: dnqpU5 A942 39,7
Error in line 21: qRYO9UA13Z S200 77,7
Error in line 25: dnqpU5 A429 42,7
